# sfxr

./: MainWindow.xib  ProjectHome.md  README.md  SecondView.xib  main.m  sfxr-Info.plist  sfxr_Prefix.pch
Classes/: AudioInterface.cpp  AudioInterface.h  LibraryViewController.h  LibraryViewController.mm  SettingsViewController.h  sfxr.cpp  sfxrAppDelegate.mm
HelpfulLinks/: iPhone Dev Center- Table View Programming Guide for iPhone OS- Creating and Configuring a Table View.webloc  main.cpp - sfxr - Project Hosting on Google Code.webloc
branches/as3sfxr/: as3sfxr.as3proj
branches/as3sfxr/src/: SfxrApp.as  SfxrGenerator.as
branches/as3sfxr/src/assets/: Thumbs.db
branches/as3sfxr/src/ui/: TinyButton.as
branches/sfxr-iPhoneOS/: BigIcon.tiff  LibraryView.xib  readme.txt  sfxr-Info.plist  sfxr_Prefix.pch
branches/sfxr-iPhoneOS/Classes/: AudioInterface.h  FirstViewController.h  FirstViewController.mm  LibraryViewController.h  LibraryViewController.mm  SampleSourceFunctor.h  SettingsViewController.mm  sfxr.cpp  sfxr.h  sfxrAppDelegate.h  sfxrAppDelegate.mm
branches/sfxr-iPhoneOS/HelpfulLinks/: DevMaster.net - OpenAL Lesson 8- OggVorbis Streaming Using The Source Queue.webloc  Sending Mail.webloc
branches/sfxr-iPhoneOS/sfxr.xcodeproj/: project.pbxproj
sfxr/: .gitignore  CHANGES.txt  INSTALL.txt  Ideas  LICENSE.txt  Makefile.am  Makefile.backup  Makefile.orig  autogen.sh  configure.ac  main.cpp  sdlkit.h  sfxr  tools.cpp  tools.h
sfxr.xcodeproj/: project.pbxproj  project.xcworkspace
sfxr/source/: main.cpp  sdlkit.cpp  sdlkit.h
src/: SfxrSynth.as
src/ui/: TinySlider.as
trunk/sfxr/: CMakeLists.txt  ChangeLog  Makefile.am  configure.ac  ddrawkit.h  main.cpp  sdlkit.cpp  sdlkit.h  sfxr  sfxr.1  tools.cpp  tools.h
trunk/sfxr/source/: sdlkit.cpp
